--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Whichever port you want to run this on 
+# Whichever port you want to run this on
 FEEDGEN_PORT=3000
 
 # Change this to use a different bind address
@@ -23,3 +23,7 @@ FEEDGEN_PUBLISHER_DID="did:plc:abcde...."
 
 # Delay between reconnect attempts to the firehose subscription endpoint (in milliseconds)
 FEEDGEN_SUBSCRIPTION_RECONNECT_DELAY=3000
+
+FEEDGEN_USER_HANDLE="MyName.bsky.social"
+
+FEEDGEN_USER_PASSWORD="123456"
